--- a/style.css
+++ b/style.css
@@ -165,7 +165,7 @@ ul>:nth-child(3) {
 footer {
   width: 755px;
   height: 200px;
-  margin-left: 30px;
+  margin-left: 275px;
   margin-top: 30px;
   outline: 1px solid white;
   color: white;
